...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/category_recycler"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:itemCount="3"
            app:layout_constraintVertical_bias="0"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
...
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/header_image" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/character_recycler"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="3"
            android:padding="4dp"
            android:clipToPadding="false"
...
