<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/overviewFragment">

    <fragment
        android:id="@+id/overviewFragment"
        android:name="com.jesse.rickymortyapp.screens.overview.OverviewFragment"
        android:label="overview_fragment"
        tools:layout="@layout/overview_fragment" >
        <action
            android:id="@+id/action_overviewFragment_to_detailFragment"
            app:destination="@id/detailFragment" />
    </fragment>
    <fragment
        android:id="@+id/detailFragment"
        android:name="com.jesse.rickymortyapp.screens.detail.DetailFragment"
        android:label="Character"
        tools:layout="@layout/detail_fragment">

        <argument
            android:name="character"
            app:argType="com.jesse.rickymortyapp.network.RickMortyCharacter"
            />
    </fragment>
</navigation>